@@ -19,6 +19,7 @@ update_qpkg_conf
 NvKernelDriver      # load before NVIDIA_GPU_DRV
 NVIDIA_GPU_DRV      # load before HD_Station & linux-station
 netmgr              # 'Network & Virtual Switch'
+NMAP                # load before WMAP
 
 # high-level language interpreters
 Python
@@ -55,6 +56,7 @@ QVS                 # 'Virtualization Station'
 HD_Station          # note: 'HD Station' or 'Linux Station' - only one can be enabled at any time
 container-station
 linux-station       # load after container-station
+Qemu
 
 # web servers
 Qapache
